@@ -25,8 +25,10 @@ gen_test_results.sh to make releases easier.
 Copied the coding standards from shUnit2, but haven't fully implemented them
 in shFlags yet.
 
-When a user defines their own --help flag, no more warning is thrown when
-FLAGS() is called stating that the help flag already defined.
+Issue# 1: When a user defines their own --help flag, no more warning is thrown
+when FLAGS() is called stating that the help flag already defined.
+
+Issue# 2: Passing the --nohelp option no longer gives help output.
 
 
 Changes with 1.0.1
